@@ -3,7 +3,9 @@
 #include <stdlib.h>
 #include <assert.h>
 
+#include <sys/socket.h>
 #include <netinet/in.h>
+#include <arpa/inet.h>
 
 int32_t SPNATIVE__SPVM__Socket__socket(SPVM_ENV* env, SPVM_VALUE* stack) {
   
